--- a/css/pop.css
+++ b/css/pop.css
@@ -15,3 +15,24 @@ P.poptxt{
 	font-family:Arial,Helvetica,sans-serif;
 	text-shadow: 1px 0px 6px rgba(0, 0, 0, 1);
 }
+@media all and (min-width: 46em){
+
+      	 #overview {
+	   
+	  width: 30%;
+	  float:left;
+
+	  }
+	  #items {
+	   
+	  width: 69%;
+	  float:right;
+
+	  }
+	   #load {
+	   
+	  width: 70%;
+	  float:right;
+
+	  }
+}
